ENG-1201 rel: add debian 12(Bookworm) workers